fix: adjusted tag size on mobile

--- a/wp-content/themes/portfolio/src/css/layout/_hero.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_hero.scss
@@ -31,7 +31,7 @@
     flex-wrap: wrap;
 
     &:nth-of-type(2) {
-      top: 22.5px;
+      top: 46px;
 
       .cell {
         transform: skew(-45deg);
