--- a/wp-content/themes/portfolio/src/css/layout/_project-list.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_project-list.scss
@@ -74,7 +74,7 @@
       @media only screen and (max-width: 767.98px) {
         margin: 0 0.5rem 0.5rem 0;
         padding: 0 0.5em;
-        font-size: 0.8rem;
+        font-size: 0.9rem;
       }
 
       &:last-child {
